--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Build project
         run: npm run build
         
+      - name: Verify dist directory
+        run: ls -la ./dist
+      
+      - name: Ensure dist exists
+        run: mkdir -p ./dist
+      
       - name: Add .nojekyll
         run: touch ./dist/.nojekyll
         
